--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -2,8 +2,13 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-}
 
-.arco-notification-content{
-  line-height: 24px;
+  .arco-notification-content{
+    line-height: 24px;
+  }
+
+  .arco-icon-loading, .arco-icon-spin{
+    width: 2em;
+    height: 2em;
+  }
 }
