--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -6,18 +6,26 @@ html{
   display: flex;
   flex-direction: column;
   height: 100vh;
+}
 
+.c-grid{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, auto));
+  grid-gap: 0 12px;
+}
+
+body{
   .v-input__details{
     align-items: flex-start;
-    min-height: 30px;
-    padding: 4px 0 0;
+    min-height: 24px;
+    padding: 2px 0 0 !important;
   }
-}
 
-.v-overlay__scrim{
-  opacity: 0.05 !important;
-}
+  .v-overlay__scrim{
+    opacity: 0.05;
+  }
 
-.v-snackbar__content{
-  padding: 0 !important;
+  .v-snackbar__content{
+    padding: 0;
+  }
 }
