--- a/src/assets/css/settings.scss
+++ b/src/assets/css/settings.scss
@@ -1,5 +1,17 @@
 // can be used in your own components to access vuetify's variables.
 // TODO 怎么用
-@use 'vuetify/settings' with (
-  $color-pack: true,
+@forward 'vuetify/settings' with (
+  $font-size-root: 14px,
+  $border-radius-root: 2px,
+  $button-height: 32px,
+  $button-font-size: 1rem,
+  $field-font-size: 12px,
+  $field-label-floating-scale: 1,
+  $input-details-min-height: 24px,
+  $input-details-padding-above: 2px,
+  $text-field-details-padding-inline: 0,
+  $overlay-opacity: 0.05,
+  $snackbar-content-padding: 0,
+  $input-density: ('default': 0, 'comfortable': -2, 'compact': -6),
+  $label-font-size: 12px,
 );
