--- a/src/assets/css/_settings.scss
+++ b/src/assets/css/_settings.scss
@@ -12,4 +12,5 @@
   $snackbar-content-padding: 0,
   $input-density: ('default': 0, 'comfortable': -2, 'compact': -6),
   $label-font-size: 12px,
+  $card-elevation: 6,
 );
