- 给菜单添加图标

--- a/src/assets/css/_settings.scss
+++ b/src/assets/css/_settings.scss
@@ -11,6 +11,7 @@
   $text-field-details-padding-inline: 0,
   $input-density: ('default': 0, 'comfortable': -2, 'compact': -6),
   $label-font-size: 12px,
+  $list-item-icon-margin-end: 16px,
 
 
   $card-elevation: 6,
