添加菜单折叠

--- a/src/assets/css/_settings.scss
+++ b/src/assets/css/_settings.scss
@@ -12,7 +12,7 @@
   $input-density: ('default': 0, 'comfortable': -2, 'compact': -6),
   $label-font-size: 12px,
   $list-item-icon-margin-end: 16px,
-
+  $toolbar-prepend-btn-margin-start: 0,
 
   $card-elevation: 6,
   $shadow-key-umbra: (
