--- a/src/assets/css/_settings.scss
+++ b/src/assets/css/_settings.scss
@@ -10,6 +10,7 @@
   $input-details-padding-above: 2px,
   $text-field-details-padding-inline: 0,
   $input-density: ('default': 0, 'comfortable': -2, 'compact': -6),
+  $input-chips-margin-bottom: ('default': 0, 'comfortable': 1, 'compact': 1.5) !default,
   $label-font-size: 12px,
   $list-item-icon-margin-end: 16px,
   $toolbar-prepend-btn-margin-start: 0,
