- table min-height - 渲染器实现 table 空数据/加载中

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -15,7 +15,7 @@ body {
   }
 
   /* stylelint-disable-next-line selector-class-pattern */
-  .v-overlay__scrim {
+  .v-overlay__scrim, .vxe-grid.is--loading::before {
     background-color: rgb(255 255 255 / 72%);
     backdrop-filter: blur(1px) saturate(167%);
     opacity: 1;
