--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,12 +1,33 @@
+@use "sass:color";
+@use './variable' as *;
+
+
+/* 滚动条整体部分,该部分必须定义，否则下面的定义都不生效 */
+::-webkit-scrollbar {
+  width: auto;
+  height: auto;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $scrollbar-color;
+  background-clip: content-box;
+  border: 3px solid transparent;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: color.adjust($scrollbar-color, $lightness:-10%);
+}
+
 html {
   overflow-y: auto;
 }
 
-.c_grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, auto));
-  grid-gap: 0 12px;
-}
+
 
 body {
   /* stylelint-disable-next-line selector-class-pattern */
@@ -20,4 +41,10 @@ body {
     backdrop-filter: blur(1px) saturate(167%);
     opacity: 1;
   }
+}
+
+.c_grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, auto));
+  grid-gap: 0 12px;
 }
