--- a/src/assets/css/_settings.scss
+++ b/src/assets/css/_settings.scss
@@ -1,7 +1,7 @@
 // can be used in your own components to access vuetify's variables.
 @forward 'vuetify/settings' with (
   $font-size-root: 14px,
-  $border-radius-root: 2px,
+  // $border-radius-root: 2px,
   $button-height: 40px,
   $button-line-height: inherit,
   $button-font-size: 1rem,
