- 命令式调用dialog 抛出传进去的组件实例 回调

--- a/src/assets/css/_settings.scss
+++ b/src/assets/css/_settings.scss
@@ -26,6 +26,7 @@
   $toolbar-prepend-btn-margin-start: 0,
 
   $card-elevation: 6,
+  $button-card-actions-margin: 12px,
   $shadow-key-umbra: (
     0: (
       0 0 0 0 var(--v-shadow-key-umbra-opacity),
