- 请求url编码问题

--- a/src/assets/css/_settings.scss
+++ b/src/assets/css/_settings.scss
@@ -19,8 +19,7 @@
     'default': 0,
     'comfortable': 1,
     'compact': 1.5,
-  )
-  !default,
+  ),
   $label-font-size: 12px,
   $list-item-icon-margin-end: 16px,
   $toolbar-prepend-btn-margin-start: 0,
