--- a/src/assets/css/_settings.scss
+++ b/src/assets/css/_settings.scss
@@ -10,6 +10,8 @@
   $input-details-min-height: 24px,
   $input-details-padding-above: 2px,
   $text-field-details-padding-inline: 0,
+  $list-item-icon-margin-start: 19px,
+  $list-item-prepend-size: 24px,
   $input-density: (
     'default': 0,
     'comfortable': -2,
