--- a/src/assets/css/_settings.scss
+++ b/src/assets/css/_settings.scss
@@ -9,6 +9,8 @@
   $input-details-min-height: 26px,
   $input-details-padding-above: 2px,
   $text-field-details-padding-inline: 0,
+  $field-control-padding-start: 14px,
+  $field-control-padding-end: 14px,
   // 左侧菜单icon和缩进
   $list-item-icon-margin-start: 19px,
   $list-item-prepend-size: 24px,
