--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,3 +1,10 @@
+/*
+ * @Author       : huchaomin peter@qingcongai.com
+ * @Date         : 2023-07-14 13:58:40
+ * @LastEditors  : huchaomin peter@qingcongai.com
+ * @LastEditTime : 2023-09-22 16:36:40
+ * @Description  :
+ */
 @use "sass:color";
 @use './variable' as *;
 
@@ -28,30 +35,24 @@ html {
 }
 
 body {
-  /* stylelint-disable-next-line selector-class-pattern */
   .v-input__details {
     align-items: flex-start;
   }
 
-  /* stylelint-disable-next-line selector-class-pattern */
   .v-field__input{
     gap: 4px;
   }
 
-  /* stylelint-disable-next-line selector-class-pattern */
   .v-list-item__prepend {
-    /* stylelint-disable-next-line selector-class-pattern */
     .v-checkbox-btn {
       margin-inline-start: -7px
     }
   }
 
-  /* stylelint-disable-next-line selector-class-pattern */
   .v-field--variant-outlined .v-label.v-field-label--floating{
     transform: translateY(-60%);
   }
 
-  /* stylelint-disable-next-line selector-class-pattern */
   .b_filter .v-overlay__scrim, .vxe-grid.is--loading::before {
     background-color: rgb(255 255 255 / 72%);
     backdrop-filter: blur(1px) saturate(167%);
