--- a/src/assets/css/_settings.scss
+++ b/src/assets/css/_settings.scss
@@ -1,6 +1,19 @@
+/*
+ * @Author       : error: error: git config user.name & please set dead value or install git && error: git config user.email & please set dead value or install git & please set dead value or install git
+ * @Date         : 2023-09-27 17:30:46
+ * @LastEditors  : error: error: git config user.name & please set dead value or install git && error: git config user.email & please set dead value or install git & please set dead value or install git
+ * @LastEditTime : 2023-09-27 21:10:01
+ * @Description  :
+ */
 /* stylelint-disable length-zero-no-unit */
 @use './variable' as *;
 @forward 'vuetify/settings' with (
+  $utilities:(
+    float:false,
+    float-ltr: false,
+    float-rtl:false,
+  ),
+  $color-pack:false,
   $font-size-root: 14px,
   $border-radius-root: $border-radius,
   $field-font-size: 12px,
