--- a/src/assets/css/_settings.scss
+++ b/src/assets/css/_settings.scss
@@ -1,8 +1,8 @@
 /*
  * @Author       : error: error: git config user.name & please set dead value or install git && error: git config user.email & please set dead value or install git & please set dead value or install git
  * @Date         : 2023-09-27 17:30:46
- * @LastEditors  : error: error: git config user.name & please set dead value or install git && error: git config user.email & please set dead value or install git & please set dead value or install git
- * @LastEditTime : 2023-09-27 21:10:01
+ * @LastEditors  : huchaomin peter@qingcongai.com
+ * @LastEditTime : 2023-10-07 09:53:33
  * @Description  :
  */
 /* stylelint-disable length-zero-no-unit */
