--- a/src/assets/css/_color-pack.scss
+++ b/src/assets/css/_color-pack.scss
@@ -1,12 +1,14 @@
 /*
 * @Author       : huchaomin peter@qingcongai.com
 * @Date         : 2023-10-07 09:34:33
-* @LastEditors  : huchaomin peter@qingcongai.com
-* @LastEditTime : 2023-10-07 09:51:58
+ * @LastEditors  : huchaomin peter@qingcongai.com
+ * @LastEditTime : 2023-10-07 18:04:05
 * @Description  : vuetify 的color-pack false 掉了，这里只要定义自己需要的就可以了
 */
 
 /* stylelint-disable selector-class-pattern */
+@use './mixin' as *;
+
 .bg-white {
   color: #000 !important;
   background-color: #FFF !important;
@@ -15,4 +17,8 @@
 .bg-transparent {
   color: currentcolor !important;
   background-color: transparent !important;
+}
+
+.bg-filter {
+  @include bg-filter;
 }
