--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -2,7 +2,7 @@
  * @Author       : huchaomin peter@qingcongai.com
  * @Date         : 2023-07-14 13:58:40
  * @LastEditors  : huchaomin peter@qingcongai.com
- * @LastEditTime : 2023-10-07 18:04:51
+ * @LastEditTime : 2023-10-10 10:09:25
  * @Description  :
  */
 @use "sass:color";
@@ -69,6 +69,6 @@ body {
 
 .c_grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, auto));
-  grid-gap: 0 12px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+  grid-gap: 0 24px;
 }
