调整表格高度

--- a/src/assets/css/_vxe-table.scss
+++ b/src/assets/css/_vxe-table.scss
@@ -1,3 +1,10 @@
+/*
+ * @Author       : huchaomin peter@qingcongai.com
+ * @Date         : 2023-08-25 14:35:00
+ * @LastEditors  : huchaomin peter@qingcongai.com
+ * @LastEditTime : 2023-10-11 10:53:18
+ * @Description  :
+ */
 @use "sass:color";
 @use './variable' as *;
 @use './settings' as *;
