--- a/src/assets/css/_variable.scss
+++ b/src/assets/css/_variable.scss
@@ -1,4 +1,12 @@
+/*
+ * @Author       : huchaomin peter@qingcongai.com
+ * @Date         : 2023-07-24 09:32:24
+ * @LastEditors  : huchaomin peter@qingcongai.com
+ * @LastEditTime : 2023-10-11 14:06:32
+ * @Description  :
+ */
 $primary: #4F7DFF;
+$light-primary: #d9ecff;
 $font-color: #3A3541; // 同on-background on-surface
 $scrollbar-color: #bfbfbf;
 $border-radius: 4px;
