角色编辑时不能修改角色编码

--- a/src/assets/css/_variable.scss
+++ b/src/assets/css/_variable.scss
@@ -2,11 +2,12 @@
  * @Author       : huchaomin peter@qingcongai.com
  * @Date         : 2023-07-24 09:32:24
  * @LastEditors  : huchaomin peter@qingcongai.com
- * @LastEditTime : 2023-10-11 14:06:32
+ * @LastEditTime : 2023-10-17 14:58:09
  * @Description  :
  */
 $primary: #4F7DFF;
 $light-primary: #d9ecff;
 $font-color: #3A3541; // 同on-background on-surface
 $scrollbar-color: #bfbfbf;
+$disabled-bg-color: #e0e0e0;
 $border-radius: 4px;
